src/test/ui/issue-46983.stderr
error[E0621]: explicit lifetime required in the type of `x`
  --> $DIR/issue-46983.rs:14:5
   |
13 | fn foo(x: &u32) -> &'static u32 {
   |        - consider changing the type of `x` to `&'static u32`
14 |     &*x
   |     ^^^ lifetime `'static` required

error: aborting due to previous error

